--- a/pokemon-game/package.json
+++ b/pokemon-game/package.json
@@ -25,7 +25,7 @@
     "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --open",
+    "watch": "webpack-dev-server --open",
     "build": "webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
