--- a/valencia/package.json
+++ b/valencia/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.19.2",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
@@ -14,7 +16,8 @@
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-image-show": "^0.3.4",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "dev": "next",
